--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,33 @@
     width: 100%;
    
 }
+.wrapper{
+    background:hsl(233, 47%, 7%);
+    border: 3px solid green;
+    margin: 0 -10px;
+}
+
+.container{
+    background:hsl(244, 38%, 16%);
+    text-align: center;
+    padding: 0px -10px;
+    margin: 500px 20px;
+    border: 3px solid red;
+    
+
+}
+.title{
+    color:hsl(0, 0%, 100%);
+}
+.par{
+    color:hsla(0, 0%, 100%, 0.75);
+}
+.detail-heading{
+    color:hsla(0, 0%, 100%, 0.6);
+}
+.detail-stat{
+    color:hsl(0, 0%, 100%) ;
+}
+.key-word{
+    color:hsl(277, 64%, 61%);
+}
