--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,15 @@ margin:40px 0px;
 }
 
 @media (min-width:960px) {
+    .hero{
+        display:flex;
+        justify-content:stretch;
+       width:100%;
+        padding:0 0px ;
+        margin:0 0px ;
+        background:linear-gradient(hsl(277, 64%, 61%));
+       
+    }
     .container{
         display:flex;
         flex-flow: row-reverse nowrap;
@@ -55,8 +64,8 @@ margin:40px 0px;
         }
 
         .main-content{
-            padding:0 0 0 0;
-            margin:0 0 0 0;
+            padding:0 0px 0 0px;
+            margin:0 0px 0px 10px ;
 
         }
 }
