--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ margin:40px 0px;
         justify-content:stretch;
        width:100%;
         padding:0 0px ;
-        margin:0 55px ;
+        margin: 30px 55px ;
         background:linear-gradient(hsl(277, 64%, 61%));
        
     }
