--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,8 @@ margin:40px 0px;
     padding:0 0 80px 0;
 }
 .key-word{
-    color:hsl(277, 64%, 61%);
+    /* color:hsl(277, 64%, 61%); */
+    color:blue;
 }
 
 @media (min-width:960px) {
