--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,7 @@ margin:40px 0px;
     padding:0 0 80px 0;
 }
 .key-word{
-    /* color:hsl(277, 64%, 61%); */
-    color:blue;
+    color:hsl(277, 64%, 61%);
 }
 
 @media (min-width:960px) {
@@ -50,7 +49,7 @@ margin:40px 0px;
         justify-content:stretch;
        width:100%;
         padding:0 0px ;
-        margin: 20px 55px 0px 55px ;
+        margin: 30px 55px ;
         background:linear-gradient(hsl(277, 64%, 61%));
        
     }
