--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,18 @@
     text-align: center;
     padding: 0px -10px 0px -10px;
     margin: 0px 25px 0px 25px;
+
     
     
 
 }
 .title{
     color:hsl(0, 0%, 100%);
+    te
 }
 .par{
-    color:hsla(0, 0%, 100%, 0.75);
+    color:hsl(0, 0%, 100%, 0.75);
+    font-size: 15px;
 }
 .detail-heading{
     color:hsla(0, 0%, 100%, 0.6);
@@ -48,16 +51,23 @@ margin:40px 0px;
         display:flex;
         justify-content:stretch;
        width:100%;
-        padding:0 0px ;
-        margin: 30px 55px ;
+        padding:200px 0px ;
+        margin: 0px 0px ;
         background:linear-gradient(hsl(277, 64%, 61%));
        
     }
-    .container{
+    .wrapper{
+        
         display:flex;
         flex-flow: row-reverse nowrap;
-        justify-content: flex-start;
-        padding:150px 0px;
+        padding:10px 0px 10px 0px;
+        margin:0px 0px 0px 0px;
+    }
+    .container{
+       
+        justify-content: center;
+        padding:50px 0px;
+        margin:100px 200px ;
     }  
     .detail-wrapper{
         display: flex;
