--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,53 @@
+*{
+    box-sizing: border-box;
+}
 .hero{
-    width: 100%;
-    background:linear-gradient(hsl(277, 64%, 61%))
-   
+   width: 80%;
+   margin: 80px 80px -35px 35px ;
+ 
 }
 .wrapper{
     background:hsl(233, 47%, 7%);
-    margin: -8px -10px;
+    margin: 0px 0px;
+    border:3px solid red;
 }
 
 .container{
     background:hsl(244, 38%, 16%);
     text-align: center;
-    padding: 0px -10px 0px -10px;
-    margin: 0px 25px 0px 25px;
-
-    
-    
+    padding: 0px 0px ;
+    margin: 0px 35px ;  
 
 }
 .title{
     color:hsl(0, 0%, 100%);
-    te
+    font-size:38px;
 }
+    
 .par{
-    color:hsl(0, 0%, 100%, 0.75);
-    font-size: 15px;
+    color:hsla(0, 0%, 100%, 0.75);
+    font-size:15px;
+    
 }
 .detail-heading{
     color:hsla(0, 0%, 100%, 0.6);
     margin: -8px 0px;
-   
+    font-size: 8px;
+    padding:10px 0px  ;
+    text-transform: uppercase;
 }
 .detail{
-margin:40px 0px;
+padding:10px 0px ;
+margin:0px 0px;
+font-size:15px;
 }
 .detail-stat{
-   
+    font-size: 20px;
     color:hsl(0, 0%, 100%) ;
-    margin:2px 0px;
+    margin:0px 0px;
+    padding:0px 0px ;
 }
-.detail-3b{
-    padding:0 0 80px 0;
-}
+
 .key-word{
     color:hsl(277, 64%, 61%);
 }
