--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
 }
 .hero{
    width: 81%;
-   margin: 80px 0px -35px 33px ;
-   padding: 0px 90px -35px 33px ;
+   margin: 2.5rem 0px -0.4rem 1.4rem ;
+   padding: 0px 0rem -0.1rem 0rem ;
  
 }
 .wrapper{
@@ -59,37 +59,33 @@ font-size:15px;
     color:hsl(277, 64%, 61%);
 }
 
-@media (min-width:960px) {
-    .hero{
-        display:flex;
-        justify-content:stretch;
-       width:100%;
-        padding:200px 0px ;
-        margin: 0px 0px ;
-        background:linear-gradient(hsl(277, 64%, 61%));
-       
-    }
+@media(min-width:960px) {
     .wrapper{
-        
         display:flex;
-        flex-flow: row-reverse nowrap;
-        padding:10px 0px 10px 0px;
-        margin:0px 0px 0px 0px;
+        flex-flow:row-reverse nowrap;
+        justify-content: center;
+        padding: 5rem 0;
+    }
+    .hero{
+        padding:0 0rem ;
+        margin: 0 5rem;
+        flex-basis: 15rem ;
     }
     .container{
        
-        justify-content: center;
-        padding:50px 0px;
-        margin:100px 200px ;
-    }  
+        flex-basis: 15rem ;
+        margin: 0 -5rem 0 0;
+       
+        
+    }
+
     .detail-wrapper{
-        display: flex;
+        display:flex;
+        flex-flow:row nowrap;
         justify-content: space-evenly;
-        }
 
-        .main-content{
-            padding:0 0px 0 0px;
-            margin:0 0px 0px 10px ;
+}
 
-        }
+
+
 }
