added more padding to wrapper 960px width.

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ font-size:15px;
         display:flex;
         flex-flow:row-reverse nowrap;
         justify-content: center;
-        padding: 5rem 0;
+        padding: 6rem 0 8rem 6rem;
     }
     .hero{
         padding:0 0rem ;
