--- a/styles.css
+++ b/styles.css
@@ -66,18 +66,22 @@ font-size:15px;
     .wrapper{
         display:flex;
         flex-flow:row-reverse nowrap;
-        justify-content: center;
-        padding: 4rem 0 8rem 6rem;
+        align-items: center;
+        padding: 4rem 3rem 8rem 3rem;
+        
+       
     }
     .hero{
-        padding:0 0rem ;
-        margin: 0 5rem;
-        flex-basis: 15rem ;
+        margin: 5rem 0rem 0rem 0rem ; 
+        padding: 0rem 5rem 0em 0rem;
+      
     }
     .container{
        
-        flex-basis: 15rem ;
-        margin: 0 -5rem 0 0;
+       
+        margin: 5rem 0rem 0rem 8rem ; 
+        padding: 0rem 5rem 0em 1rem;
+       
        
         
     }
