--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,7 @@
 .container{
     background:hsl(244, 38%, 16%);
     text-align:center;
-    /* padding: 0px 100px 0px 0px ;
-    margin: 0px 35px 0 32px; */
+    
     margin: 0rem 1.5rem 10rem 1.5rem ;
    padding: 0rem 0rem 0rem 0rem ;
 
@@ -30,17 +29,19 @@
     font-weight: 700;
     color:hsl(0, 0%, 100%);
     font-size:28px;
-    padding:70px 10px 0 110px  ;
-    margin: 0px -90px ;
+    margin-top: 2rem;
+ 
 }
     
 .par{
     color:hsla(0, 0%, 100%, 0.75);
     font-size:13px;
     line-height: 23px;
-    padding:20px 10px 25px 110px  ;
-    margin: 0px -100px ;
-     font-family: 'Lexend Deca', sans-serif;
+    font-family: 'Lexend Deca', sans-serif;
+  
+    margin-top: 1rem ;
+    
+     
     
 }
 .detail-heading{
