--- a/styles.css
+++ b/styles.css
@@ -1,93 +1,4 @@
-*{
-    box-sizing: border-box;
-}
-.hero{
-   width: 80%;
-   margin-left:  1.5rem ;
-  
- 
-}
-.wrapper{
-    display:flex;
-    flex-flow:column nowrap;
-    background:hsl(233, 47%, 7%);
-    margin: 0px 0px;
-    padding:20px 0px 40px 0px;
-    
-}
-
-.container{
-    background:hsl(244, 38%, 16%);
-    text-align:center;
-    
-    margin: 0rem 1.5rem 10rem 1.5rem ;
-   padding: 0rem 0rem 4em 0rem ;
-
-}
-.title{
-    font-family: 'Inter', sans-serif;
-    font-weight: 700;
-    color:hsl(0, 0%, 100%);
-    font-size:28px;
-    margin-top: 2rem;
- 
-}
-    
-.par{
-    color:hsla(0, 0%, 100%, 0.75);
-    font-size:13px;
-    line-height: 23px;
-    font-family: 'Lexend Deca', sans-serif;
-  
-    margin-top: 1rem ;
-    
-     
-    
-}
-.detail-heading{
-    color:hsla(0, 0%, 100%, 0.6);
-    font-size: 12px;
-    margin: 0rem  ;
-    padding: 0rem ;
-    text-transform: uppercase;
-}
-  
-
-    .detail{
-         margin-top: 2rem;
-     
-font-size:15px;
-}
-.detail-wrapper{
-    margin: 60rem 0rem 0rem 0rem ;
-    padding: 0rem 0rem 0rem 0rem ;
-}
-.detail-stat{
-    font-size: 20px;
-    color:hsl(0, 0%, 100%) ;
-    margin:0px 0px;
-    padding:0px 0px ;
-}
-
-.key-word{
-    color:hsl(277, 64%, 61%);
-}
-
-@media(min-width:960px){
-   .wrapper{
-       display:flex;
-       flex-flow: row-reverse nowrap;
-       justify-content: center;
-    }
-    .hero{
-        flex-shrink: 1;
-        padding: 0rem 2rem;
-
-    }
-    .container{
-        flex-shrink: 1;
-        margin:0rem 2rem;
-        padding:0rem 0rem;   
-    }
-
-}
+body {
+    background-color: hsl(233, 47%, 7%);
+    color: white;
+ }
