--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
 body {
     background-color: hsl(233, 47%, 7%);
     color: white;
+    display:flex;
+    justify-content:center;
+   
+    
+    
+
     
  }
- .wrapper{
-    text-
- }
+.wrapper{
+   border:2px solid red;
+  
+}
