--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: hsl(233, 47%, 7%);
-    color: white;
+    color: red;
     display:flex;
     justify-content: center 
  
