--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: hsl(233, 47%, 7%);
     color:white;
     display:inline;
-    margin:0px;
+    margin:0;
   
  }    
     
