--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
-body {
+
+
+body{
     background-color: hsl(233, 47%, 7%);
     color:white;
-    display:inline;
+    display:grid;
     margin:0;
-  
+
  }    
     
 html,body{
