--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,18 @@
 
-
+*{
+  box-sizing: border-box;
+}
 body{
     background-color: hsl(233, 47%, 7%);
     color:white;
     display:grid;
-   
+    margin:0;
 
  }    
     
-
+html,body{
+ height: 100vh;
+}
    
 .wrapper{
   margin:auto;
