--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@ body{
     background-color: hsl(233, 47%, 7%);
     color:white;
     display:grid;
-    margin:0; 
+    margin:0;
+   
 
  }    
     
@@ -16,4 +17,9 @@ html,body{
    
 .wrapper{
   margin:auto;
+  display: flex;
+  flex-flow:row-reverse ;
 }
+
+
+
