--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,6 @@ body{
     color:white;
     display:grid;
     margin:0;
-   
-
  }    
     
 html,body{
@@ -17,9 +15,23 @@ html,body{
    
 .wrapper{
   margin:auto;
-  display: flex;
-  flex-flow:row-reverse ;
+  display:grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-auto-flow: dense;
+  
+  
+   /* display: flex;
+   flex-flow: row-reverse; */
+   
 }
+
+figure{
+  grid-column:2;
+ margin:0;
+}
+
+
+
 
 
 
