--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body{
     background-color: hsl(233, 47%, 7%);
     color:white;
     display:grid;
-    margin:0;
+    margin:0px;
  }    
     
 html,body{
@@ -25,10 +25,17 @@ html,body{
    
 }
 
+
 figure{
 grid-column:2;
  margin:0px;
+
+ 
 }
+img{
+  width: 100%;
+}
+
 
 
 
