--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@
 *{
   box-sizing: border-box;
 }
+
 body{
-    background-color: hsl(233, 47%, 7%);
-    color:white;
-    display:grid;
-    margin:0px;
- }    
+  background-color: hsl(233, 47%, 7%);
+  color:white;
+  display:grid;
+  margin:0px;
+}    
     
 html,body{
  height: 100vh;
@@ -17,23 +18,17 @@ html,body{
   margin:auto;
   display:grid;
   grid-template-columns: repeat(2,1fr);
-  grid-auto-flow: dense;
-  
-  
-   /* display: flex;
-   flex-flow: row-reverse; */
-   
+  grid-auto-flow: dense; 
+  width:70vw;
 }
-
 
 figure{
-grid-column:2;
- margin:0px;
-
- 
+  grid-column:2;
+  margin:0px; 
 }
+
 img{
-  width: 100%;
+  width:100%;
 }
 
 
