--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ html,body{
   grid-template-columns: repeat(2,1fr);
   grid-auto-flow: dense; 
   width:70vw;
+
 }
 
 figure{
@@ -29,6 +30,9 @@ figure{
 
 img{
   width:100%;
+}
+section{
+   background:hsl(244, 38%, 16%);   
 }
 
 
