--- a/styles.css
+++ b/styles.css
@@ -39,16 +39,23 @@ img{
 
 section{
   background:hsl(244, 38%, 16%);
- 
+  padding: 10%;
+}
+p{
+  font-size:16px;
 }
 
-dt{
-  font-family: 'Lexend Deca', sans-serif;
-  
-}
+
 h1 > span{
   color:  hsl(277, 64%, 61%);
 }
+
+
+
+
+
+
+
 
 
 
