--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,8 @@ img{
 section{
   background:hsl(244, 38%, 16%);
   padding: 10%;
+ 
+  
 }
 p{
   font-size:16px;
@@ -48,6 +50,15 @@ p{
 
 h1 > span{
   color:  hsl(277, 64%, 61%);
+}
+dl{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+
+}
+dd{
+  grid-row: 2/2;
+  margin:0;
 }
 
 
