changed font to uppercase on dd and font silze to large on dt.

--- a/styles.css
+++ b/styles.css
@@ -53,9 +53,18 @@ dl{
   grid-template-columns: repeat(3,1fr); 
 }
 
+dt{
+  font-size: large;
+}
+
 dd{
   margin:0;
+  text-transform: uppercase;
+  
 }
+
+
+
 
 
 
