--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ html,body{
  height: 100vh;
 }
    
-.wrapper{
+main{
   margin:auto;
   display:grid;
   grid-template-columns: repeat(2,1fr);
@@ -54,13 +54,12 @@ dl{
 }
 
 dt{
-  font-size: large;
+  font-size: medium;
 }
 
 dd{
   margin:0;
   text-transform: uppercase;
-  
 }
 
 
