--- a/styles.css
+++ b/styles.css
@@ -43,11 +43,14 @@ section{
 
 p{
   font-size:16px;
+  line-height:1.5;
 }
+
 
 h1 > span{
   color:  hsl(277, 64%, 61%);
 }
+
 h1{
   font-size:2em;
 }
@@ -58,7 +61,7 @@ dl{
 }
 
 dt{
-  font-size: large;
+  font-size: x-large;
 }
 
 dd{
